# clex

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  clex.spec.in  clex.sublime-project  configure.ac
src/: Makefile.am  bookmarks.c  bookmarks.h  cfg-clex  cfg-clex.1  cfg.c  cfg.h  clex.1  clex.h  clexheaders.h  cmp.c  cmp.h  completion.c  completion.h  control.c  control.h  convert.sed  curses.h  directory.c  directory.h  edit.c  edit.h  exec.c  exec.h  filepanel.c  filepanel.h  filerw.c  filerw.h  filter.c  filter.h  help.c  help.h  help_en.hlp  history.c  history.h  inout.c  inout.h  inschar.c  inschar.h  kbd-test.1  (+48 more)
